src/snapshots/molt__tests__early_boundary_rule.snap
---
source: src/lib.rs
expression: "emit_diagnostic_str(& input, make_error_diagnostic(& err))"
---
error: expected `,`
   ┌─ "test_data/molt_grammar/early_boundary_rule.molt":18:19
   │
18 │         bar => $a {},
   │                   ^ expected `,`
